Finish porting classes to java.