@@ -45,8 +45,8 @@ plugins {
     id 'checkstyle'
     id 'maven-publish'
     id 'signing'
-    id 'org.jetbrains.kotlin.jvm' version '1.6.10'
-    id 'org.jetbrains.kotlin.plugin.spring' version '1.6.10'
+    id 'org.jetbrains.kotlin.jvm'
+    id 'org.jetbrains.kotlin.plugin.spring'
 }
 
 description = "Chronicle Server"
@@ -135,7 +135,7 @@ test {
 }
 
 ext.odata_version = '4.2.0'
-ext.chronicle_api_version = '0.0.16'
+ext.chronicle_api_version = '0.0.17'
 
 dependencies {
     implementation "com.google.guava:guava:${guava_version}"
@@ -162,8 +162,6 @@ dependencies {
         testImplementation "com.openlattice:rhizome-client:${rhizome_client_version}:tests"
     }
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
     /*
      * TESTING
      */
@@ -177,13 +175,45 @@ dependencies {
 
 compileKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
         freeCompilerArgs += '-Xjvm-default=compatibility'
     }
 }
 compileTestKotlin {
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = "11"
         freeCompilerArgs += '-Xjvm-default=compatibility'
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs+= [ "--add-modules", "java.base",
+                             "--add-modules", "java.se",
+                             "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += [ "--add-modules", "java.base",
+                 "--add-modules", "java.se",
+                 "--add-exports","java.base/jdk.internal.ref=ALL-UNNAMED",
+                 "--add-opens","java.base/java.lang=ALL-UNNAMED",
+                 "--add-opens","java.base/java.nio=ALL-UNNAMED",
+                 "--add-opens","java.base/sun.nio.ch=ALL-UNNAMED",
+                 "--add-opens","java.management/sun.management=ALL-UNNAMED",
+                 "--add-opens","jdk.management/com.sun.management.internal=ALL-UNNAMED"]
+}
+
+jar {
+    doFirst {
+        manifest {
+            attributes (
+                    "Class-Path": configurations.runtimeClasspath.files.collect { it.getName() }.join(" "),
+                    "Main-Class": mainClassName
+            )
+        }
+    }
+}
+
+startScripts {
+    classpath = files(jar.archivePath)
 }
